--- a/Newsportal/templates/post.html
+++ b/Newsportal/templates/post.html
@@ -13,9 +13,9 @@ News
        <table>
            {% for post in posts %}
            <tr>
-               <td>{{ post.post_title|censor }}</td>
+               <td>{{ post.post_title|censor|truncatechars:50 }}</td>
                <td>{{ post.post_time|date:'d M Y' }}</td>
-               <td>{{ post.post_text|truncatechars:20|censor }}</td>
+               <td>{{ post.post_text|truncatechars:50|censor }}</td>
            </tr>
            {% endfor %}
 
@@ -23,4 +23,23 @@ News
    {% else %}
        <h2>Новостей нет!</h2>
    {% endif %}
+
+   {% if page_obj.has_previous %}
+      <a href="?page=1">1</a>
+      {% if page_obj.previous_page_number != 1 %}
+         ...
+         <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+      {% endif %}
+   {% endif %}
+
+   {{ page_obj.number }}
+
+   {% if page_obj.has_next %}
+      <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+      {% if paginator.num_pages != page_obj.next_page_number %}
+         ...
+         <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+      {% endif %}
+   {% endif %}
+
 {% endblock content %}
