--- a/Newsportal/templates/flatpages/default.html
+++ b/Newsportal/templates/flatpages/default.html
@@ -12,33 +12,55 @@
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
+
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">Django flatpages</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarResponsive"
-                        aria-controls="navbarResponsive" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about/">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contacts/">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        {% load cache %}
+            {% cache 30 header %}
+                {% block header %}
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+                        <div class="container">
+                            <a class="navbar-brand" href="#">Django flatpages</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                    data-target="#navbarResponsive"
+                                    aria-controls="navbarResponsive" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarResponsive">
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="/news">Home
+                                            <span class="sr-only">(current)</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/about/">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/contacts/">Contact</a>
+                                    </li>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/news/search/">Поиск</a>
+                                    </li>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/accounts/login">Войти</a>
+                                    </li>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/accounts/logout">Выйти</a>
+                                    </li>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/accounts/signup">Зарегистрироваться</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                {% endblock header %}
+            {% endcache %}
         <!-- Page content-->
         <div class="container">
            <div class="row">
